<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/login_activity_background_color"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/find_id_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/find_email_text"
        android:fontFamily="@font/godo_b"
        android:textSize="40sp"
        android:textColor="@color/login_text_color"
        android:gravity="center"/>

    <EditText
        android:id="@+id/find_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/prompt_find_id_input"
        android:fontFamily="@font/godo_b"
        android:textColor="@color/login_activity_text_color"
        android:background="@drawable/login_edit_text"
        android:paddingLeft="15dp"
        android:textSize="15sp"
        android:maxLines="1"
        android:maxLength="50"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_marginTop="100sp"
        android:layout_below="@+id/find_id_title"/>

    <TextView
        android:id="@+id/explain_find_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_explain_find_id"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/shop_item_font"
        android:layout_marginTop="12sp"
        android:gravity="left"
        android:layout_below="@+id/find_email_edit_text"/>

    <RelativeLayout
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/duplicate_check_button"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/explain_find_id">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/godo_b"
            android:gravity="center"
            android:text="@string/prompt_register_ok"
            android:textColor="@color/login_edit_text_color"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="13dp"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/login_activity_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ir.alirezabdn.wp7progress.WP10ProgressBar
        android:id="@+id/find_password_progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        app:animationDuration="2300"
        app:indicatorColor="@color/colorAccent"
        app:indicatorHeight="7"
        app:indicatorRadius="5"
        app:interval="100" />


</RelativeLayout>