<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/register_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_activity_main_text"
        android:textColor="@color/login_text_color"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/godo_b"
        android:textSize="40sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:layout_centerInParent="true">

        <!--닉네임-->
        <TextView
            android:id="@+id/register_nickname_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_register_nickname_text"
            android:fontFamily="@font/shop_item_font_b"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="30dp"/>
        <EditText
            android:id="@+id/register_nickname_edit_text"
            android:layout_below="@+id/register_nickname_text_view"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:maxLength="7"
            android:hint="@string/prompt_register_nickname_input"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="18dp"
            android:fontFamily="@font/godo_b"
            android:textColor="@color/login_activity_text_color"
            android:background="@drawable/login_edit_text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="15sp"
            android:maxLines="1"
            android:selectAllOnFocus="true"/>

        <LinearLayout
            android:id="@+id/nickname_duplicate_check_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/register_nickname_edit_text"
            android:background="@drawable/duplicate_check_button"
            android:layout_below="@+id/register_nickname_text_view"
            android:orientation="vertical"
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">
            <TextView
                android:id="@+id/nickname_duplicate_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/login_edit_text_color"
                android:fontFamily="@font/godo_b"
                android:text="@string/prompt_register_duplicate_text"/>
        </LinearLayout>



        <!--이메일-->
        <TextView
            android:id="@+id/register_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_register_id_text"
            android:fontFamily="@font/shop_item_font_b"
            android:layout_below="@+id/register_nickname_edit_text"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/id_contion_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/shop_item_font"
            android:layout_toRightOf="@+id/register_id_text_view"
            android:layout_below="@+id/register_nickname_edit_text"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="7dp"/>

        <EditText
            android:id="@+id/register_id_edit_text"
            android:layout_below="@+id/register_id_text_view"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:maxLength="30"
            android:hint="@string/prompt_register_id_input"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/godo_b"
            android:textColor="@color/login_activity_text_color"
            android:background="@drawable/login_edit_text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>

        <ImageView
            android:id="@+id/id_check_image_view"
            android:layout_toRightOf="@+id/register_id_edit_text"
            android:layout_below="@+id/register_id_text_view"
            android:layout_marginTop="11dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/password_not_ok_icon"/>

        <!--<LinearLayout
            android:id="@+id/id_duplicate_check_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/register_id_edit_text"
            android:background="@drawable/duplicate_check_button"
            android:clickable="true"
            android:layout_below="@+id/register_id_text_view"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/login_edit_text_color"
                android:fontFamily="@font/godo_b"
                android:text="@string/prompt_register_duplicate_text"/>
        </LinearLayout>-->



        <!--비밀번호-->
        <TextView
            android:id="@+id/register_pw_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_register_pw_text"
            android:fontFamily="@font/shop_item_font_b"
            android:layout_below="@+id/register_id_edit_text"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="30dp"/>

        <ImageView
            android:id="@+id/register_pw_help"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_below="@+id/register_pw_text_view"
            android:layout_marginTop="3dp"
            android:layout_marginStart="30dp"
            android:background="@null"
            android:src="@drawable/register_help_icon" />

        <TextView
            android:id="@+id/pw_contion_text_view"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shop_item_font"
            android:layout_toRightOf="@+id/register_pw_help"
            android:layout_below="@+id/register_pw_text_view"
            android:textSize="12sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/register_pw_edit_text"
            android:layout_below="@+id/pw_contion_text_view"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:hint="@string/prompt_register_pw_input"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="18dp"
            android:fontFamily="@font/godo_b"
            android:maxLength="15"
            android:textColor="@color/login_activity_text_color"
            android:background="@drawable/login_edit_text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

        <ImageView
            android:id="@+id/password_check_image_view"
            android:layout_toRightOf="@+id/register_pw_edit_text"
            android:layout_below="@+id/pw_contion_text_view"
            android:layout_marginTop="11dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/password_not_ok_icon"/>

        <!--비밀번호 재확인-->

        <EditText
            android:id="@+id/register_re_pw_edit_text"
            android:layout_below="@+id/register_pw_edit_text"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:maxLength="20"
            android:hint="@string/prompt_register_re_pw_input"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="18dp"
            android:fontFamily="@font/godo_b"
            android:textColor="@color/login_activity_text_color"
            android:background="@drawable/login_edit_text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

        <ImageView
            android:id="@+id/password_recheck_image_view"
            android:layout_toRightOf="@+id/register_pw_edit_text"
            android:layout_below="@+id/register_pw_edit_text"
            android:layout_marginTop="19dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/password_not_ok_icon"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/duplicate_check_button"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/login_edit_text_color"
                android:fontFamily="@font/godo_b"
                android:text="@string/prompt_register_ok"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/duplicate_check_button"
            android:layout_marginLeft="30dp"
            android:clickable="true"
            android:layout_toRightOf="@+id/register_button"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/login_edit_text_color"
                android:fontFamily="@font/godo_b"
                android:text="@string/prompt_register_cancel"/>
        </LinearLayout>

    </RelativeLayout>

    <ir.alirezabdn.wp7progress.WP10ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        app:animationDuration="2300"
        app:indicatorColor="@color/colorAccent"
        app:indicatorHeight="7"
        app:indicatorRadius="5"
        app:interval="100" />

</RelativeLayout>